--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,8 +26,7 @@ jobs:
             - .
 
   test:
-    docker:
-      - image: cimg/node:<<parameters.node-version>>
+    executor: node-executor
     steps:
       - attach_workspace:
           at: .
