--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,11 +19,11 @@ commands:
           name: Deploy to AWS
           command: |
             tar -cvzf 'node-backend.tar' *
-            scp -i fingerprints 'node-backend.tar' ubuntu@13.234.32.207:/home/ubuntu/
+            scp 'node-backend.tar' ubuntu@13.234.32.207:/home/ubuntu/
             echo "copied node-backend.tar"
-            ssh -i fingerprints node-backend 'mkdir -p data/services/node-backend && tar -xvzf node-backend.tar -C data/services/node-backend/ && rm node-backend.tar'
+            ssh node-backend 'mkdir -p data/services/node-backend && tar -xvzf node-backend.tar -C data/services/node-backend/ && rm node-backend.tar'
             echo "deployed to server"
-            ssh -i fingerprints node-backend 'cd data/services/node-backend && pm2 start ./src/server.js'
+            ssh node-backend 'cd data/services/node-backend && pm2 start ./src/server.js'
 
 executors:
   node-executor:
