--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,15 +18,15 @@ commands:
       - run:
           name: Deploy to AWS
           command: |
-           mkdir -p ~/.ssh
-            touch ~/.ssh/config
-            echo -e "Host *\n\tStrictHostKeyChecking no\n\n" >> ~/.ssh/config
-            tar -cvzf 'node-backend.tar' *
-            scp 'node-backend.tar' ubuntu@13.234.32.207:/home/ubuntu/
-            echo "copied node-backend.tar"
-            ssh node-backend 'mkdir -p data/services/node-backend && tar -xvzf node-backend.tar -C data/services/node-backend/ && rm node-backend.tar'
-            echo "deployed to server"
-            ssh node-backend 'cd data/services/node-backend && pm2 start ./src/server.js'
+            mkdir -p ~/.ssh
+             touch ~/.ssh/config
+             echo -e "Host *\n\tStrictHostKeyChecking no\n\n" >> ~/.ssh/config
+             tar -cvzf 'node-backend.tar' *
+             scp -i fingerprints 'node-backend.tar' ubuntu@13.234.32.207:/home/ubuntu/
+             echo "copied node-backend.tar"
+             ssh -i fingerprints node-backend 'mkdir -p data/services/node-backend && tar -xvzf node-backend.tar -C data/services/node-backend/ && rm node-backend.tar'
+             echo "deployed to server"
+             ssh -i fingerprints node-backend 'cd data/services/node-backend && pm2 start ./src/server.js'
 
 executors:
   node-executor:
@@ -57,7 +57,6 @@ jobs:
       - attach_workspace:
           at: ~/
       - prod-aws-deploy
-
 
 workflows:
   version: 2
